# qsynthesis

./: .buildinfo  .gitignore  .gitlab-ci.yml  README.md  api_usage.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: doc.yml  release.yml
_modules/: index.html
_modules/qsynthesis/: tritonast.html
_sources/: api_usage.rst.txt  index.rst.txt  installation.rst.txt
_sources/api/: synthesis.rst.txt
_sources/plugin/: plugin_usage.rst.txt
_static/: documentation_options.js
api/: sym_exec.html  synthesis.html  table.html  tritonast.html  types.html
dev_doc/: table.html
doc/: api_usage.rst  conf.py  index.rst  installation.rst  latexstyling.sty  requirements.txt
doc/api/: sym_exec.rst  table.rst  tritonast.rst  types.rst
doc/dev_doc/: table.rst
doc/figs/: reassembly.drawio
doc/mock/: triton.py
doc/plugin/: plugin_usage.rst
ida_plugin/: qsynthesis_plugin.py
plugin/: plugin_usage.html
qsynthesis/: __init__.py  grammar.py  lookuptable.py  lookuptabledb.py  tritonast.py  types.py
qsynthesis/algorithms/: __init__.py  synthesizer_base.py  synthesizer_plhld.py  synthesizer_td.py  synthesizer_tdbu.py
qsynthesis/common/: abstract_grammar.py  lkptable.py
qsynthesis/grammar/: __init__.py  grammar.py  jitting.py  operators.py  ops.py
qsynthesis/plugin/: __init__.py  actions.py  ast_viewer.py  dependencies.py  popup_actions.py  processor.py  slicer.py  view.py
qsynthesis/tables/: __init__.py  (+6 more)
scripts/: run_synthesis_bar_benchmark.py
tests/: test_fullsym.py  test_qtracesym.py
(+27 files in other folders)
